# MeetScribe

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  기능명세서.md  설계서.md  체크리스트.md
docs/: CONTRACT.md  사용법.html
scripts/: setup-dev-sidecar.ps1  stage-sidecar-bundle.ps1
sidecar/: entry.py  meetscribe-sidecar.spec  pyproject.toml  requirements.txt
sidecar/meetscribe/: __init__.py  cli.py  config.py  runtime_torch.py  schemas.py
sidecar/meetscribe/api/: __init__.py  app.py  events.py  jobs.py
sidecar/meetscribe/exporters/: __init__.py  docx_.py  json_.py  srt.py  txt.py
sidecar/meetscribe/pipeline/: __init__.py  _compat.py  _diarize_worker.py  align.py  diarize.py  merge.py  preprocess.py  runner.py  transcribe.py
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: api.ts  stores.ts  types.ts
src/lib/components/: Dropzone.svelte  Hero.svelte  ProgressBar.svelte  SpeakerPanel.svelte  Toolbar.svelte  TranscriptView.svelte
