# MeetScribe 데스크탑 셸(Tauri 2 / Rust) 크레이트 정의.
#
# 역할: Python 사이드카(externalBin)를 앱 시작 시 spawn → /health 폴링 → 준비되면
#       메인 윈도우 표시, 앱 종료 시 사이드카 kill(좀비 방지). UI 로직은 전부 프론트(WebView).
#
# ⚠️ 빌드 검증 불가(이 PC에 Rust/Tauri 툴체인 미설치) → 구조·의존성 스키마 정확성까지만.
[package]
name = "meetscribe"
version = "0.1.0"
description = "MeetScribe - 완전 로컬 화자분리 회의록 데스크탑 앱"
authors = ["MeetScribe"]
edition = "2021"
# Tauri 2는 Rust 1.77.2+ 요구.
rust-version = "1.77.2"

# 주: CONTRACT가 명시한 파일이 src/main.rs 하나이므로 별도 lib.rs를 두지 않고
#     main.rs 단일 바이너리에 lifecycle 로직을 모두 담는다(데스크탑 전용이라 모바일
#     공용 lib 진입점 불필요). 모바일 타깃 추가 시 lib.rs로 분리하면 된다.

[build-dependencies]
# build.rs에서 tauri 빌드 스크립트(권한/스키마 코드젠) 실행.
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 코어. 데스크탑 전용이므로 모바일 기능 비활성.
tauri = { version = "2", features = [] }
# 사이드카(externalBin) spawn/kill에 필요한 shell 플러그인(Command::new_sidecar API 제공).
tauri-plugin-shell = "2"
# 프론트가 파일 열기/저장 다이얼로그(@tauri-apps/plugin-dialog)를 쓰므로 Rust측 등록 필요.
# (Dropzone의 파일 선택, Toolbar의 내보내기 경로 저장)
tauri-plugin-dialog = "2"
# /health 폴링용 동기 HTTP 클라이언트(블로킹). 가벼운 폴링 1엔드포인트라 reqwest blocking로 충분.
reqwest = { version = "0.12", features = ["blocking"] }
# 사이드카 핸들/상태 공유 시 직렬화에 사용(필요 최소).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 릴리스 번들 크기 축소(설치 파일 경량화 — 설계서 §7).
[profile.release]
panic = "abort"   # 패닉 시 되감기 제거 → 바이너리 축소
codegen-units = 1 # 최적화 강화
lto = true        # 링크 타임 최적화
opt-level = "s"   # 크기 우선 최적화
strip = true      # 심볼 제거
